⚡️ build打包去除console打印信息

--- a/src/views/home/index.scss
+++ b/src/views/home/index.scss
@@ -1,6 +1,6 @@
 .user-info {
   font-size: 20px;
-  color: var(--global-color-333);
+  color: var(--global-color-ff0000);
 }
 svg {
   font-size: 40px;
