--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 :root {
   --global-color-ff0000: #ff0000;
-  --van-button-primary-color: var(--global-color-333);
+  --van-button-primary-color: var(--global-color-ff0000);
 }
+$global-color: #ff0000;
