🚧 接口代理方法优化，请求事例

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,4 +2,4 @@
   --global-color-ff0000: #ff0000;
   --van-button-primary-color: var(--global-color-ff0000);
 }
-$global-color: #ff0000;
+$global-background-color: #f7f8fa;
